# langextract-outlines

./: NOTES.md  README.md  RESULTS.md  UNRESOLVED.md  main.py  pyproject.toml  test.py
.github/workflows/: release_pypi.yml
langextract_outlines/: __init__.py  provider.py  schema.py
