[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-outlines"
version = "0.1.0"
description = "Outlines custom provider plugin for LangExtract"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "langextract>=1.0.0",
    "outlines>=1.0.0,<1.4.0",
]

[project.entry-points."langextract.providers"]
outlines = "langextract_outlines.provider:OutlinesProvider"

[project.optional-dependencies]
test = [
    "pytest",
    "outlines[transformers]>=1.0.0,<1.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_outlines*"]
